--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/emito-k/free-quotes#readme",
   "dependencies": {
+    "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fetch": "^1.1.0"
